crates/carta/tests/snapshots/golden_writer__markdown_phpextra__table__table-caption-blocks.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
| h   |
|-----|
| v   |

First caption paragraph  
Second caption paragraph
