crates/carta/tests/snapshots/golden_writer__markdown_phpextra__table__table-caption.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
| h   |
|-----|
| v   |

A caption for the table
